--- a/archive/docker-compose.yaml
+++ b/archive/docker-compose.yaml
@@ -18,58 +18,19 @@
 #   minio-net:
 #     driver: bridge
 
-
 services:
-
-  minio:
-    image: quay.io/minio/minio
-    container_name: minio
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
-      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
-    volumes:
-      - ${HOME}/minio-data:/data
-    command: server /data --console-address ":9001"
-    restart: unless-stopped
-    networks:
-      - airbyte-net
-
-  postgres-destination:
-    image: debezium/postgres:13
-    container_name: postgres-destination
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_DESTINATION_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_DESTINATION_USER}
-      POSTGRES_DB: ${POSTGRES_DESTINATION_DB_NAME}
-    ports:
-      - "4000:5432"
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    restart: unless-stopped
-    networks: 
-      - airbyte-net
-
-  dbt:
+  duckdb-dbt:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: dbt
+    container_name: duckdb-dbt
     working_dir: /app
     volumes:
-      - ./dbt:/app       # <-- project code and models synced with the container
-      - ~/.dbt:/root/.dbt # <-- user config and credentials synced with the container
-   
+      - ./data:/local
+    entrypoint: bash
     tty: true
     networks:
       - airbyte-net
-    depends_on:
-      - postgres-destination
-
-volumes:
-  pg_data:
 
 networks:
   airbyte-net:
