firts dbt debug all checks passed

--- a/astro/.astro/docker-compose.override.yml
+++ b/astro/.astro/docker-compose.override.yml
@@ -1,15 +1,35 @@
 version: '3.1'
 services:
-postgres_data:
-  image: postgres:15.4-alpine # change image
-  volumes:
-    - ${PWD}/include/postgres:/var/lib/postgresql/data # change volume
-  networks:
-    - airbyte-net
-  ports:
-    - 5433:5432
-  environment:
-    - POSTGRES_USER=postgres
-    - POSTGRES_PASSWORD=postgres
-  extra_hosts:
-    - "host.docker.internal:host-gateway" # check this
+  postgres_data:
+    image: postgres:15.4-alpine
+    volumes:
+      - ${PWD}/include/postgres:/var/lib/postgresql/data
+    networks:
+      airbyte-net:
+        aliases:
+          - postgres-destination
+    ports:
+      - 5433:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=posgresadmin
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+
+
+# version: '3.1'
+# services:
+# postgres_data:
+#   image: postgres:15.4-alpine # change image
+#   volumes:
+#     - ${PWD}/include/postgres:/var/lib/postgresql/data # change volume
+#   networks:
+#     - airbyte-net
+#   ports:
+#     - 5433:5432
+#   environment:
+#     - POSTGRES_USER=postgres
+#     - POSTGRES_PASSWORD=postgres
+#   extra_hosts:
+#     - "host.docker.internal:host-gateway" # check this
