--- a/astro/requirements.txt
+++ b/astro/requirements.txt
@@ -6,10 +6,11 @@ boto3 # to interact with MinIO from Python
 websockets
 minio
 apache-airflow-providers-airbyte
-dbt-core
+
 #dbt-postgres
 pandas
 sqlalchemy
 psycopg2-binary
 astronomer-cosmos
-dbt-postgres
+#dbt-postgres
+#dbt-core
