--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,8 +69,32 @@ services:
     depends_on:
       - postgres-destination
 
+  superset:
+    image: apache/superset:latest
+    container_name: superset
+    environment:
+      SUPERSET_LOAD_EXAMPLES: "no"
+      SUPERSET_SECRET_KEY: "my_super_secret_key_12345"  # Cambia esto por algo más seguro
+    ports:
+      - "8088:8088"
+    volumes:
+      - superset_home:/app/superset_home
+    depends_on:
+      - postgres-destination
+    command: >
+      /bin/sh -c "
+      pip install psycopg2-binary &&
+      superset db upgrade &&
+      superset fab create-admin --username admin --password admin --firstname Superset --lastname Admin --email admin@example.com || true &&
+      superset init &&
+      superset run -h 0.0.0.0 -p 8088
+      "
+    networks:
+      - airbyte-net
+
 volumes:
   pg_data:
+  superset_home:
 
 networks:
   airbyte-net:
