--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,7 @@ services:
     networks: 
       - airbyte-net
 
+  # dbt for local development and testing, should be overriden
   dbt:
     build:
       context: .
